--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.8",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.3",
     "nodemon": "^2.0.12"
   }
 }
