--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Amazona"],
+  "cSpell.words": ["Amazona", "signin"],
   "git.ignoreLimitWarning": true,
   "files.associations": {
     "*.js": "javascriptreact"
